--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -14,13 +14,17 @@
         </div>
 
         <div class="divClass" >
-            <span id="spanId"> Mi comida favorita es ceviche y mi restaurant favorito es</span> <a href=https://saboresdelperu.com.ar>Sabores del Peru</a>
+            <span id="spanId"> Mi comida favorita es ceviche y mi restaurant favorito es</span> <br>
+            <a href=https://saboresdelperu.com.ar>SABORES DEL PERÚ</a>
         </div>
 
         <div id="ThirdDiv">
             <ul>
-                <il>Ceviche de conchas negras </br> <img src= https://media-cdn.tripadvisor.com/media/photo-s/08/ce/8e/bf/el-ajicito.jpg></il> </br> </br>
-                <il>Leche de tigre </br> <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmicevichedehoy.com%2Fwp-content%2Fuploads%2F2018%2F10%2Fleche-de-tigre_700x700.jpg&f=1&nofb=1"></il> </br>
+                <br><il>Ceviche de conchas negras</il> </br>
+                <br><img src= https://media-cdn.tripadvisor.com/media/photo-s/08/ce/8e/bf/el-ajicito.jpg></br>
+                <br><il>Leche de tigre</br></il>
+                <br><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmicevichedehoy.com%2Fwp-content%2Fuploads%2F2018%2F10%2Fleche-de-tigre_700x700.jpg&f=1&nofb=1"></br>
+
 
             </ul>
         </div>
